testsuite/tests/typecheck/should_fail/T14904a.stderr

T14904a.hs:9:6: error:
    • Expected kind ‘forall (a :: k). g a’, but ‘f’ has kind ‘k1’
      ‘k1’ is a rigid type variable bound by
        a family instance declaration
        at T14904a.hs:9:3-30
    • In the first argument of ‘F’, namely ‘(f :: forall a. g a)’
      In the type family declaration for ‘F’
